docs(resume): 2017-01-25 Resume update

--- a/source/stylesheets/layout/_footer-root.scss
+++ b/source/stylesheets/layout/_footer-root.scss
@@ -4,6 +4,7 @@
 //============================================================================//
 
 .root {
+  // background: $secondary-bg-color;
   background: $primary-bg-color;
   font-size: $md-font-size;
   padding: pxem(65px) 0;
